syntax = "proto3";

package mailing;

service MailingService {
  rpc sendMail (MailPayloadDto) returns (MailSendResponse) {}
}

service TemplateService {
  rpc Create (CreateTemplateDto) returns (Template) {}
  rpc FindAll (FindAllTemplatesDto) returns (Templates) {}
  rpc FindOne (FindOneTemplateDto) returns (Template) {}
  rpc FindOneByEventName (FindOneTemplateByEventNameDto) returns (Template) {}
  rpc Update (UpdateTemplateDto) returns (Template) {}
  rpc Remove (FindOneTemplateDto) returns (Template) {}
}

message MailPayloadDto {
  string eventName = 1;
  string email = 2;
  repeated PayloadVariable payloadVariables = 3;
}

message PayloadVariable {
  string variable = 1;
  string value = 2;
}

message CreateTemplateDto {
  string eventName = 1;
  string subject = 2;
  string body = 3;
}

message FindAllTemplatesDto {}

message FindOneTemplateDto {
  string id = 1;
}

message FindOneTemplateByEventNameDto {
  string eventName = 1;
}

message UpdateTemplateDto {
  string id = 1;
  optional string subject = 3;
  optional string body = 4;
}

message Templates {
  repeated Template templates = 1;
}

message Template {
  string id = 1;
  string eventName = 2;
  string subject = 3;
  string body = 4;
}

message MailSendResponse {
  bool success = 1;
}